Fix tests for new bahaviour